<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_Name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:autofillHints="Enter your name"
            android:gravity="center"
            android:hint="@string/placeholder_Name"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.108" />

        <EditText
            android:id="@+id/input_CardNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/input_Name"
            android:layout_marginTop="10dp"
            android:autofillHints="Enter your card number"
            android:gravity="center"
            android:hint="@string/placeholder_CardNumber"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.282" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="256dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">


        <TextView
            android:id="@+id/text_Response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/input_Guess"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="@string/placeholder_response"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/input_Guess"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.812" />

        <EditText
            android:id="@+id/input_Guess"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="67dp"
            android:layout_marginLeft="67dp"
            android:layout_marginEnd="68dp"
            android:layout_marginRight="68dp"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.083"
            tools:text="10" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <Button
            android:id="@+id/button_Submit"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_toStartOf="@+id/button_Restart"
            android:layout_toLeftOf="@+id/button_Restart"
            android:onClick="onClick_Submit"
            android:text="@string/button_Send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_Restart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521" />

        <Button
            android:id="@+id/button_Restart"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="107dp"
            android:layout_marginRight="107dp"
            android:onClick="onClick_Restart"
            android:text="@string/button_Restart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>